# PARL

./: .copyright.hook  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CMakeLists.txt  Dockerfile  MANIFEST.in  README.cn.md  README.md  remote_decorator.py  requirements.txt  setup.py  testpr
.scripts/: update_readme_paddle_version.py
.teamcity/: CHANGELOG.md  Dockerfile  build.sh  build_xly.sh  requirements.txt  requirements_fluid.txt  requirements_paddle.txt  requirements_torch.txt  update_readme_paddle_version.py  windows_build.bat  windows_requirements.txt  windows_requirements_fluid.txt  windows_requirements_paddle.txt  windows_test.sh
benchmark/dqn/: agent.py  algorithm.py  evaluate.py  model.py  train.py
common/: error_handling.py  replay_buffer.py
deepes/: CMakeLists.txt  README.md  build.sh  deepes.proto  deepes_config.prototxt
deepes/benchmark/: cartpole.h  cartpole_config.prototxt
deepes/core/include/: adam_optimizer.h  cached_gaussian_sampling.h  deepes.pb.h  gaussian_sampling.h  optimizer.h  optimizer_factory.h  sampling_factory.h  sampling_method.h  sgd_optimizer.h  utils.h
deepes/core/include/evo_kit/: cached_gaussian_sampling.h  utils.h
deepes/core/proto/: deepes.proto
deepes/core/proto/evo_kit/: evo_kit.proto
deepes/core/src/: adam_optimizer.cc  cached_gaussian_sampling.cc  deepes.pb.cc  gaussian_sampling.cc  optimizer_factory.cc  sampling_factory.cc  sgd_optimizer.cc  utils.cc
deepes/core/src/proto/: deepes.proto
deepes/demo/: cartpole_config.prototxt  cartpole_solver_parallel.cpp  model.h
deepes/demo/paddle/: cartpole_async_solver.cc  cartpole_solver_parallel.cc  gen_cartpole_init_model.py
deepes/demo/paddle/cartpole_init_model/: __model__  fc_0.b_0  fc_0.w_0  fc_1.b_0  fc_1.w_0
deepes/demo/torch/: cartpole_solver_parallel.cc
deepes/include/: adam_optimizer.h  cached_gaussian_sampling.h  gaussian_sampling.h  gaussian_table_sampling.h  optimizer.h  optimizer_factory.h  sampling_factory.h  sampling_method.h  sgd_optimizer.h  torch_predictor.h  utils.h
deepes/include/paddle/: async_es_agent.h  es_agent.h
deepes/include/torch/: es_agent.h
deepes/paddle/include/: async_es_agent.h  es_agent.h
deepes/paddle/include/evo_kit/: es_agent.h
deepes/paddle/src/: async_es_agent.cc  es_agent.cc
deepes/scripts/: build.sh
deepes/src/: adam_optimizer.cc  cached_gaussian_sampling.cc  gaussian_sampling.cc  gaussian_sampling.cpp  gaussian_table_sampling.cc  optimizer.cc  optimizer_factory.cc  sampling_factory.cc  sgd_optimizer.cc  utils.cc  utils.cpp
deepes/src/paddle/: async_es_agent.cc  es_agent.cc
deepes/src/proto/: deepes.proto
deepes/test/: CMakeLists.txt  run_test.sh  torch_sin_config.prototxt  unit_test.cc
deepes/test/include/: torch_demo_model.h
deepes/test/prototxt/: torch_sin_normal_sampling_config.prototxt  torch_sin_table_sampling_config.prototxt
deepes/test/src/: optimizers_test.cc  sampling_test.cc  test_utils.cc  torch_agent_test.cc  utils_test.cc
deepes/test/torch_agent/: CMakeLists.txt  torch_agent_test.cc
deepes/torch/include/: es_agent.h
deepes/torch/include/evo_kit/: es_agent.h
docs/: Makefile  agent.rst  algorithm.rst  conf.py  design.rst  design_doc.md  features.rst  getting_started.rst  hello.rst  implementations.rst  index.md  index.rst  installation.rst  model.rst  new_alg.rst  quickstart.rst  requirements.txt  save_param.rst  test.sh  tutorial.rst
docs/EvoKit/: minimal_example.rst  online_example.rst  overview.rst
docs/_static/: build_toc_group.js  pygments.css
docs/algo_docs/: a3c.rst  ddpg.rst  dqn.rst  index.rst  policy_gradient.rst  ppo.rst
docs/api_docs/: index.rst  utils.rst
docs/apis/: agent.rst  algorithm.rst  connect.rst  model.rst  remote_class.rst
docs/basic_structure/: agent.rst  algorithm.rst  model.rst  overview.rst
docs/framework_docs/: agent_base.rst  algorithm_base.rst  index.rst  model_base.rst  policy_distri.rst
docs/images/: parl.graffle
docs/implementations/: a2c.rst  a3c.rst  ddpg.rst  ddqn.rst  dqn.rst  impala.rst  implementations.rst  maddpg.rst  new_alg.rst  oac.rst  pg.rst  ppo.rst  qmix.rst  sac.rst  td3.rst
docs/layers_docs/: attr_holder.rst  index.rst  layer_wrappers.rst
docs/overview/: abstractions.rst  features.rst  parallelization.rst
docs/parallel_training/: cluster.rst  debug.rst  features.rst  file_distribution.rst  gpu_cluster.rst  overview.rst  recommended_practice.rst  recommended_practice1.rst  recommended_practice2.rst  recommended_pratice.rst  recommened_pratice.rst  serialization.rst  setup.rst
docs/plutils_docs/: common.rst  index.rst
docs/questions/: distributed_training.rst
docs/remote_docs/: exceptions.rst  index.rst  remote_constants.rst  (+3 more)
evo_kit/: CMakeLists.txt  README.md
evo_kit/benchmark/: cartpole.h
evo_kit/cmake/: FindEvoKit.cmake
evo_kit/cmake/Torch/: EvoKitConfig.cmake
evo_kit/core/include/evo_kit/: adam_optimizer.h  gaussian_sampling.h  optimizer.h  optimizer_factory.h  sampling_factory.h  sampling_method.h  sgd_optimizer.h
evo_kit/core/src/: adam_optimizer.cc  cached_gaussian_sampling.cc  gaussian_sampling.cc  optimizer_factory.cc  utils.cc
evo_kit/demo/paddle/: cartpole_async_solver.cc  cartpole_solver_parallel.cc  gen_cartpole_init_model.py
evo_kit/demo/torch/: CMakeLists.txt  cartpole_solver_parallel.cc
evo_kit/paddle/include/evo_kit/: async_es_agent.h
evo_kit/paddle/src/: es_agent.cc
evo_kit/scripts/: build.sh  build_torch_demo.sh  lib_install.sh
evo_kit/test/: CMakeLists.txt  run_test.sh
evo_kit/test/prototxt/: torch_sin_cached_config.prototxt  torch_sin_config.prototxt
evo_kit/test/src/: optimizers_test.cc  torch_agent_test.cc  utils_test.cc
layers/: __init__.py  layer_wrappers.py
papers/: AAAI_2020.md  DeepMind2020.md  ICLR_2020.md  ICLR_2021.md  NeurIPS 2019 RL papers.numbers  NeurIPS_2020.md  archive.md  model-based.md
parl/: __init__.py  exceptions.py
scripts/: build.sh
source/: conf.py  hello.rst  index.rst  quickstart.rst
test_tipc/: prepare.sh  prepare_npu_test.sh  readme.md  test_train_inference_python.sh
tests/: test_replay_buffer.py
(+1356 files in other folders)
